--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
@@ -22,6 +23,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
+    "react-uuid": "^2.0.0",
     "socket.io-client": "^4.5.4",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
@@ -51,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "autoprefixer": "^10.4.13",
     "cross-env": "^7.0.3",
     "postcss": "^8.4.19",
